--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="col-12">
                 <p class="banner-text">Luxury Living</p>
                 <h2 class="banner-title">Discover A Brand Luxurious Hotel</h2>
-                <button type="button" class="btn btn-rooms text-white">OUR ROOMS</button>
+                <button type="button" class="btn btn-rooms">OUR ROOMS</button>
                 <button type="button" class="btn btn-book" id="book-room">BOOK A ROOM</button>
             </div>
         </div>
